--- a/SearchDemo/SearchDemo/SearchDemo.csproj
+++ b/SearchDemo/SearchDemo/SearchDemo.csproj
@@ -100,6 +100,7 @@
     </Compile>
     <Compile Include="Model\SearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -108,6 +109,7 @@
     <None Include="SearchDemo_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Dictionary.txt" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
